--- a/Pustok/Pustok/Areas/Manage/Views/Account/Login.cshtml
+++ b/Pustok/Pustok/Areas/Manage/Views/Account/Login.cshtml
@@ -54,6 +54,7 @@
                                             <input asp-for="Password" class="form-control form-control-user">
                                             <span asp-validation-for="Password"></span>
                                         </div>
+                                       <div class="text-danger" asp-validation-summary="ModelOnly"></div>
                                         @*<div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
